@@ -20,7 +20,6 @@ import net.minestom.server.adventure.AdventurePacketConvertor;
 import net.minestom.server.adventure.Localizable;
 import net.minestom.server.adventure.audience.Audiences;
 import net.minestom.server.attribute.Attribute;
-import net.minestom.server.command.CommandManager;
 import net.minestom.server.command.CommandSender;
 import net.minestom.server.coordinate.Point;
 import net.minestom.server.coordinate.Pos;
@@ -52,7 +51,6 @@ import net.minestom.server.network.ConnectionManager;
 import net.minestom.server.network.ConnectionState;
 import net.minestom.server.network.PlayerProvider;
 import net.minestom.server.network.packet.client.ClientPacket;
-import net.minestom.server.network.packet.client.play.ClientChatMessagePacket;
 import net.minestom.server.network.packet.server.SendablePacket;
 import net.minestom.server.network.packet.server.ServerPacket;
 import net.minestom.server.network.packet.server.login.LoginDisconnectPacket;
@@ -66,12 +64,14 @@ import net.minestom.server.scoreboard.BelowNameTag;
 import net.minestom.server.scoreboard.Team;
 import net.minestom.server.snapshot.EntitySnapshot;
 import net.minestom.server.snapshot.PlayerSnapshot;
+import net.minestom.server.snapshot.SnapshotImpl;
 import net.minestom.server.snapshot.SnapshotUpdater;
 import net.minestom.server.statistic.PlayerStatistic;
 import net.minestom.server.timer.Scheduler;
 import net.minestom.server.utils.MathUtils;
 import net.minestom.server.utils.PacketUtils;
 import net.minestom.server.utils.async.AsyncUtils;
+import net.minestom.server.utils.chunk.ChunkUpdateLimitChecker;
 import net.minestom.server.utils.chunk.ChunkUtils;
 import net.minestom.server.utils.function.IntegerBiConsumer;
 import net.minestom.server.utils.identity.NamedAndIdentified;
@@ -105,7 +105,6 @@ import java.util.function.UnaryOperator;
  * You can easily create your own implementation of this and use it with {@link ConnectionManager#setPlayerProvider(PlayerProvider)}.
  */
 public class Player extends LivingEntity implements CommandSender, Localizable, HoverEventSource<ShowEntity>, Identified, NamedAndIdentified {
-
     private static final Component REMOVE_MESSAGE = Component.text("You have been removed from the server without reason.", NamedTextColor.RED);
     private static final int PACKET_PER_TICK = Integer.getInteger("minestom.packet-per-tick", 20);
     private static final int PACKET_QUEUE_SIZE = Integer.getInteger("minestom.packet-queue-size", 1000);
@@ -123,6 +122,11 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
 
     private DimensionType dimensionType;
     private GameMode gameMode;
+    /**
+     * Keeps track of what chunks are sent to the client, this defines the center of the loaded area
+     * in the range of {@link MinecraftServer#getChunkViewDistance()}
+     */
+    private Vec chunksLoadedByClient = Vec.ZERO;
     final IntegerBiConsumer chunkAdder = (chunkX, chunkZ) -> {
         // Load new chunks
         this.instance.loadOptionalChunk(chunkX, chunkZ).thenAccept(chunk -> {
@@ -169,6 +173,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
 
     // Game state (https://wiki.vg/Protocol#Change_Game_State)
     private boolean enableRespawnScreen;
+    private final ChunkUpdateLimitChecker chunkUpdateLimitChecker = new ChunkUpdateLimitChecker(6);
 
     // Experience orb pickup
     protected Cooldown experiencePickupCooldown = new Cooldown(Duration.of(10, TimeUnit.SERVER_TICK));
@@ -201,8 +206,6 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         this.username = username;
         this.usernameComponent = Component.text(username);
         this.playerConnection = playerConnection;
-
-        setBoundingBox(0.6f, 1.8f, 0.6f);
 
         setRespawnPoint(Pos.ZERO);
 
@@ -243,20 +246,21 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         this.dimensionType = spawnInstance.getDimensionType();
 
         NBTCompound nbt = NBT.Compound(Map.of(
+                "minecraft:chat_type", Messenger.chatRegistry(),
                 "minecraft:dimension_type", MinecraftServer.getDimensionTypeManager().toNBT(),
                 "minecraft:worldgen/biome", MinecraftServer.getBiomeManager().toNBT()));
         final JoinGamePacket joinGamePacket = new JoinGamePacket(getEntityId(), false, gameMode, null,
-                List.of("minestom:world"), nbt, dimensionType.toNBT(), dimensionType.getName().asString(),
+                List.of("minestom:world"), nbt, dimensionType.toString(), "minestom:world",
                 0, 0, MinecraftServer.getChunkViewDistance(), MinecraftServer.getChunkViewDistance(),
                 false, true, false, levelFlat);
-        playerConnection.sendPacket(joinGamePacket);
+        sendPacket(joinGamePacket);
 
         // Server brand name
-        playerConnection.sendPacket(PluginMessagePacket.getBrandPacket());
+        sendPacket(PluginMessagePacket.getBrandPacket());
         // Difficulty
-        playerConnection.sendPacket(new ServerDifficultyPacket(MinecraftServer.getDifficulty(), true));
+        sendPacket(new ServerDifficultyPacket(MinecraftServer.getDifficulty(), true));
 
-        playerConnection.sendPacket(new SpawnPositionPacket(respawnPoint, 0));
+        sendPacket(new SpawnPositionPacket(respawnPoint, 0));
 
         // Add player to list with spawning skin
         PlayerSkinInitEvent skinInitEvent = new PlayerSkinInitEvent(this, skin);
@@ -279,13 +283,12 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         // Recipes start
         {
             RecipeManager recipeManager = MinecraftServer.getRecipeManager();
-            playerConnection.sendPacket(recipeManager.getDeclareRecipesPacket());
+            sendPacket(recipeManager.getDeclareRecipesPacket());
 
             List<String> recipesIdentifier = new ArrayList<>();
             for (Recipe recipe : recipeManager.getRecipes()) {
                 if (!recipe.shouldShow(this))
                     continue;
-
                 recipesIdentifier.add(recipe.getRecipeId());
             }
             if (!recipesIdentifier.isEmpty()) {
@@ -295,16 +298,16 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
                         false, false,
                         false, false,
                         recipesIdentifier, recipesIdentifier);
-                playerConnection.sendPacket(unlockRecipesPacket);
+                sendPacket(unlockRecipesPacket);
             }
         }
         // Recipes end
 
         // Tags
-        this.playerConnection.sendPacket(TagsPacket.DEFAULT_TAGS);
+        sendPacket(TagsPacket.DEFAULT_TAGS);
 
         // Some client updates
-        this.playerConnection.sendPacket(getPropertiesPacket()); // Send default properties
+        sendPacket(getPropertiesPacket()); // Send default properties
         triggerStatus((byte) (24 + permissionLevel)); // Set permission level
         refreshHealth(); // Heal and send health packet
         refreshAbilities(); // Send abilities packet
@@ -330,9 +333,10 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         // Experience orb pickup
         if (experiencePickupCooldown.isReady(time)) {
             experiencePickupCooldown.refreshLastUpdate(time);
+            final Point loweredPosition = position.sub(0, .5, 0);
             this.instance.getEntityTracker().nearbyEntities(position, expandedBoundingBox.width(),
                     EntityTracker.Target.EXPERIENCE_ORBS, experienceOrb -> {
-                        if (expandedBoundingBox.intersectEntity(position, experienceOrb)) {
+                        if (expandedBoundingBox.intersectEntity(loweredPosition, experienceOrb)) {
                             PickupExperienceEvent pickupExperienceEvent = new PickupExperienceEvent(this, experienceOrb);
                             EventDispatcher.callCancellable(pickupExperienceEvent, () -> {
                                 short experienceCount = pickupExperienceEvent.getExperienceCount(); // TODO give to player
@@ -404,14 +408,13 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
 
             // #buildDeathScreenText can return null, check here
             if (deathText != null) {
-                playerConnection.sendPacket(new DeathCombatEventPacket(getEntityId(), -1, deathText));
+                sendPacket(new DeathCombatEventPacket(getEntityId(), -1, deathText));
             }
 
             // #buildDeathMessage can return null, check here
             if (chatMessage != null) {
                 Audiences.players().sendMessage(chatMessage);
             }
-
         }
         super.kill();
     }
@@ -427,14 +430,14 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         setFireForDuration(0);
         setOnFire(false);
         refreshHealth();
-        RespawnPacket respawnPacket = new RespawnPacket(getDimensionType(), getDimensionType().getName().asString(),
-                0, gameMode, gameMode, false, levelFlat, true);
-        getPlayerConnection().sendPacket(respawnPacket);
+        sendPacket(new RespawnPacket(getDimensionType().toString(), getDimensionType().getName().asString(),
+                0, gameMode, gameMode, false, levelFlat, true));
 
         PlayerRespawnEvent respawnEvent = new PlayerRespawnEvent(this);
         EventDispatcher.call(respawnEvent);
         triggerStatus((byte) (24 + permissionLevel)); // Set permission level
         refreshIsDead(false);
+        updatePose();
 
         // Runnable called when teleportation is successful (after loading and sending necessary chunk)
         teleport(respawnEvent.getRespawnPosition()).thenRun(this::refreshAfterTeleport);
@@ -444,8 +447,8 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * Sends necessary packets to synchronize player data after a {@link RespawnPacket}
      */
     private void refreshClientStateAfterRespawn() {
-        this.playerConnection.sendPacket(new UpdateHealthPacket(this.getHealth(), food, foodSaturation));
-        this.playerConnection.sendPacket(new SetExperiencePacket(exp, level, 0));
+        sendPacket(new UpdateHealthPacket(this.getHealth(), food, foodSaturation));
+        sendPacket(new SetExperiencePacket(exp, level, 0));
         triggerStatus((byte) (24 + permissionLevel)); // Set permission level
         refreshAbilities();
     }
@@ -456,9 +459,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * again, and any changes will be visible to the player.
      */
     public void refreshCommands() {
-        CommandManager commandManager = MinecraftServer.getCommandManager();
-        DeclareCommandsPacket declareCommandsPacket = commandManager.createDeclareCommandsPacket(this);
-        playerConnection.sendPacket(declareCommandsPacket);
+        sendPacket(MinecraftServer.getCommandManager().createDeclareCommandsPacket(this));
     }
 
     @Override
@@ -508,7 +509,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
 
     @Override
     public void sendPacketToViewersAndSelf(@NotNull SendablePacket packet) {
-        this.playerConnection.sendPacket(packet);
+        sendPacket(packet);
         super.sendPacketToViewersAndSelf(packet);
     }
 
@@ -620,7 +621,10 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         super.setInstance(instance, spawnPosition);
 
         if (updateChunks) {
-            sendPacket(new UpdateViewPositionPacket(spawnPosition.chunkX(), spawnPosition.chunkZ()));
+            final int chunkX = spawnPosition.chunkX();
+            final int chunkZ = spawnPosition.chunkZ();
+            chunksLoadedByClient = new Vec(chunkX, chunkZ);
+            sendPacket(new UpdateViewPositionPacket(chunkX, chunkZ));
             ChunkUtils.forChunksInRange(spawnPosition, MinecraftServer.getChunkViewDistance(), chunkAdder);
         }
 
@@ -640,7 +644,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * @param data    the message data
      */
     public void sendPluginMessage(@NotNull String channel, byte @NotNull [] data) {
-        playerConnection.sendPacket(new PluginMessagePacket(channel, data));
+        sendPacket(new PluginMessagePacket(channel, data));
     }
 
     /**
@@ -660,15 +664,6 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         Messenger.sendMessage(this, message, ChatPosition.fromMessageType(type), source.uuid());
     }
 
-    /**
-     * Makes the player send a message (can be used for commands).
-     *
-     * @param message the message that the player will send
-     */
-    public void chat(@NotNull String message) {
-        addPacketToQueue(new ClientChatMessagePacket(message));
-    }
-
     @Override
     public void playSound(@NotNull Sound sound) {
         this.playSound(sound, this.position.x(), this.position.y(), this.position.z());
@@ -676,7 +671,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
 
     @Override
     public void playSound(@NotNull Sound sound, double x, double y, double z) {
-        playerConnection.sendPacket(AdventurePacketConvertor.createSoundPacket(sound, x, y, z));
+        sendPacket(AdventurePacketConvertor.createSoundPacket(sound, x, y, z));
     }
 
     @Override
@@ -687,12 +682,12 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         } else {
             packet = AdventurePacketConvertor.createSoundPacket(sound, emitter);
         }
-        playerConnection.sendPacket(packet);
+        sendPacket(packet);
     }
 
     @Override
     public void stopSound(@NotNull SoundStop stop) {
-        playerConnection.sendPacket(AdventurePacketConvertor.createSoundStopPacket(stop));
+        sendPacket(AdventurePacketConvertor.createSoundStopPacket(stop));
     }
 
     /**
@@ -706,32 +701,32 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * @param disableRelativeVolume disable volume scaling based on distance
      */
     public void playEffect(@NotNull Effects effect, int x, int y, int z, int data, boolean disableRelativeVolume) {
-        playerConnection.sendPacket(new EffectPacket(effect.getId(), new Vec(x, y, z), data, disableRelativeVolume));
+        sendPacket(new EffectPacket(effect.getId(), new Vec(x, y, z), data, disableRelativeVolume));
     }
 
     @Override
     public void sendPlayerListHeaderAndFooter(@NotNull Component header, @NotNull Component footer) {
-        playerConnection.sendPacket(new PlayerListHeaderAndFooterPacket(header, footer));
+        sendPacket(new PlayerListHeaderAndFooterPacket(header, footer));
     }
 
     @Override
     public <T> void sendTitlePart(@NotNull TitlePart<T> part, @NotNull T value) {
-        playerConnection.sendPacket(AdventurePacketConvertor.createTitlePartPacket(part, value));
+        sendPacket(AdventurePacketConvertor.createTitlePartPacket(part, value));
     }
 
     @Override
     public void sendActionBar(@NotNull Component message) {
-        playerConnection.sendPacket(new ActionBarPacket(message));
+        sendPacket(new ActionBarPacket(message));
     }
 
     @Override
     public void resetTitle() {
-        playerConnection.sendPacket(new ClearTitlesPacket(true));
+        sendPacket(new ClearTitlesPacket(true));
     }
 
     @Override
     public void clearTitle() {
-        playerConnection.sendPacket(new ClearTitlesPacket(false));
+        sendPacket(new ClearTitlesPacket(false));
     }
 
     @Override
@@ -754,11 +749,11 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
                         .pages(book.pages()))
                 .build();
         // Set book in offhand
-        playerConnection.sendPacket(new SetSlotPacket((byte) 0, 0, (short) PlayerInventoryUtils.OFFHAND_SLOT, writtenBook));
+        sendPacket(new SetSlotPacket((byte) 0, 0, (short) PlayerInventoryUtils.OFFHAND_SLOT, writtenBook));
         // Open the book
-        playerConnection.sendPacket(new OpenBookPacket(Hand.OFF));
+        sendPacket(new OpenBookPacket(Hand.OFF));
         // Restore the item in offhand
-        playerConnection.sendPacket(new SetSlotPacket((byte) 0, 0, (short) PlayerInventoryUtils.OFFHAND_SLOT, getItemInOffHand()));
+        sendPacket(new SetSlotPacket((byte) 0, 0, (short) PlayerInventoryUtils.OFFHAND_SLOT, getItemInOffHand()));
     }
 
     @Override
@@ -772,7 +767,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     @Override
     public void setHealth(float health) {
         super.setHealth(health);
-        this.playerConnection.sendPacket(new UpdateHealthPacket(health, food, foodSaturation));
+        sendPacket(new UpdateHealthPacket(health, food, foodSaturation));
     }
 
     @Override
@@ -817,7 +812,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         Check.argCondition(!MathUtils.isBetween(food, 0, 20),
                 "Food has to be between 0 and 20");
         this.food = food;
-        this.playerConnection.sendPacket(new UpdateHealthPacket(getHealth(), food, foodSaturation));
+        sendPacket(new UpdateHealthPacket(getHealth(), food, foodSaturation));
     }
 
     public float getFoodSaturation() {
@@ -834,7 +829,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         Check.argCondition(!MathUtils.isBetween(foodSaturation, 0, 20),
                 "Food saturation has to be between 0 and 20");
         this.foodSaturation = foodSaturation;
-        this.playerConnection.sendPacket(new UpdateHealthPacket(getHealth(), food, foodSaturation));
+        sendPacket(new UpdateHealthPacket(getHealth(), food, foodSaturation));
     }
 
     /**
@@ -871,6 +866,16 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      */
     public void setDefaultEatingTime(long defaultEatingTime) {
         this.defaultEatingTime = defaultEatingTime;
+    }
+
+    @Override
+    public double getEyeHeight() {
+        return switch (getPose()) {
+            case SLEEPING -> 0.2;
+            case FALL_FLYING, SWIMMING, SPIN_ATTACK -> 0.4;
+            case SNEAKING -> 1.27;
+            default -> 1.62;
+        };
     }
 
     /**
@@ -923,13 +928,13 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         final PlayerInfoPacket removePlayerPacket = getRemovePlayerToList();
         final PlayerInfoPacket addPlayerPacket = getAddPlayerToList();
 
-        RespawnPacket respawnPacket = new RespawnPacket(getDimensionType(), getDimensionType().getName().asString(),
+        RespawnPacket respawnPacket = new RespawnPacket(getDimensionType().toString(), "minestom:world",
                 0, gameMode, gameMode, false, levelFlat, true);
 
-        playerConnection.sendPacket(removePlayerPacket);
-        playerConnection.sendPacket(destroyEntitiesPacket);
-        playerConnection.sendPacket(addPlayerPacket);
-        playerConnection.sendPacket(respawnPacket);
+        sendPacket(removePlayerPacket);
+        sendPacket(destroyEntitiesPacket);
+        sendPacket(addPlayerPacket);
+        sendPacket(respawnPacket);
         refreshClientStateAfterRespawn();
 
         {
@@ -1017,7 +1022,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * @param resourcePack the resource pack
      */
     public void setResourcePack(@NotNull ResourcePack resourcePack) {
-        playerConnection.sendPacket(new ResourcePackSendPacket(resourcePack));
+        sendPacket(new ResourcePackSendPacket(resourcePack));
     }
 
     /**
@@ -1044,7 +1049,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     private void facePosition(@NotNull FacePoint facePoint, @NotNull Point targetPosition,
                               @Nullable Entity entity, @Nullable FacePoint targetPoint) {
         final int entityId = entity != null ? entity.getEntityId() : 0;
-        playerConnection.sendPacket(new FacePlayerPacket(
+        sendPacket(new FacePlayerPacket(
                 facePoint == FacePoint.EYE ?
                         FacePlayerPacket.FacePosition.EYES : FacePlayerPacket.FacePosition.FEET, targetPosition,
                 entityId,
@@ -1058,7 +1063,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * @param entity the entity to spectate
      */
     public void spectate(@NotNull Entity entity) {
-        playerConnection.sendPacket(new CameraPacket(entity));
+        sendPacket(new CameraPacket(entity));
     }
 
     /**
@@ -1133,7 +1138,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     public void setExp(float exp) {
         Check.argCondition(!MathUtils.isBetween(exp, 0, 1), "Exp should be between 0 and 1");
         this.exp = exp;
-        this.playerConnection.sendPacket(new SetExperiencePacket(exp, level, 0));
+        sendPacket(new SetExperiencePacket(exp, level, 0));
     }
 
     /**
@@ -1153,7 +1158,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      */
     public void setLevel(int level) {
         this.level = level;
-        this.playerConnection.sendPacket(new SetExperiencePacket(exp, level, 0));
+        sendPacket(new SetExperiencePacket(exp, level, 0));
     }
 
     /**
@@ -1296,7 +1301,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         Check.argCondition(dimensionType.equals(getDimensionType()),
                 "The dimension needs to be different than the current one!");
         this.dimensionType = dimensionType;
-        sendPacket(new RespawnPacket(dimensionType, dimensionType.getName().asString(),
+        sendPacket(new RespawnPacket(dimensionType.toString(), "minestom:world",
                 0, gameMode, gameMode, false, levelFlat, true));
         refreshClientStateAfterRespawn();
     }
@@ -1315,7 +1320,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         } else {
             disconnectPacket = new DisconnectPacket(component);
         }
-        playerConnection.sendPacket(disconnectPacket);
+        sendPacket(disconnectPacket);
         playerConnection.disconnect();
     }
 
@@ -1337,7 +1342,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     public void setHeldItemSlot(byte slot) {
         Check.argCondition(!MathUtils.isBetween(slot, 0, 8), "Slot has to be between 0 and 8");
         refreshHeldSlot(slot);
-        this.playerConnection.sendPacket(new HeldItemChangePacket(slot));
+        sendPacket(new HeldItemChangePacket(slot));
     }
 
     /**
@@ -1352,8 +1357,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     public void setTeam(Team team) {
         super.setTeam(team);
         if (team != null) {
-            var players = MinecraftServer.getConnectionManager().getOnlinePlayers();
-            PacketUtils.sendGroupedPacket(players, team.createTeamsCreationPacket());
+            PacketUtils.broadcastPacket(team.createTeamsCreationPacket());
         }
     }
 
@@ -1402,7 +1406,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
                 return;
             }
 
-            playerConnection.sendPacket(new OpenWindowPacket(newInventory.getWindowId(),
+            sendPacket(new OpenWindowPacket(newInventory.getWindowId(),
                     newInventory.getInventoryType().getWindowType(), newInventory.getTitle()));
             newInventory.addViewer(this);
             this.openInventory = newInventory;
@@ -1433,17 +1437,19 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
             }
         }
 
-        CloseWindowPacket closeWindowPacket;
-        if (openInventory == null) {
-            closeWindowPacket = new CloseWindowPacket((byte) 0);
-        } else {
-            closeWindowPacket = new CloseWindowPacket(openInventory.getWindowId());
-            openInventory.removeViewer(this); // Clear cache
-            this.openInventory = null;
+        if (openInventory == getOpenInventory()) {
+            CloseWindowPacket closeWindowPacket;
+            if (openInventory == null) {
+                closeWindowPacket = new CloseWindowPacket((byte) 0);
+            } else {
+                closeWindowPacket = new CloseWindowPacket(openInventory.getWindowId());
+                openInventory.removeViewer(this); // Clear cache
+                this.openInventory = null;
+            }
+            sendPacket(closeWindowPacket);
+            inventory.update();
+            this.didCloseInventory = true;
         }
-        playerConnection.sendPacket(closeWindowPacket);
-        inventory.update();
-        this.didCloseInventory = true;
     }
 
     /**
@@ -1492,7 +1498,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     @ApiStatus.Internal
     protected void synchronizePosition(boolean includeSelf) {
         if (includeSelf) {
-            playerConnection.sendPacket(new PlayerPositionAndLookPacket(position, (byte) 0x00, getNextTeleportId(), false));
+            sendPacket(new PlayerPositionAndLookPacket(position, (byte) 0x00, getNextTeleportId(), false));
         }
         super.synchronizePosition(includeSelf);
     }
@@ -1714,7 +1720,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
             flags |= PlayerAbilitiesPacket.FLAG_ALLOW_FLYING;
         if (instantBreak)
             flags |= PlayerAbilitiesPacket.FLAG_INSTANT_BREAK;
-        playerConnection.sendPacket(new PlayerAbilitiesPacket(flags, flyingSpeed, fieldViewModifier));
+        sendPacket(new PlayerAbilitiesPacket(flags, flyingSpeed, fieldViewModifier));
     }
 
     /**
@@ -1872,9 +1878,9 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         final PlayerSkin skin = this.skin;
         List<PlayerInfoPacket.AddPlayer.Property> prop = skin != null ?
                 List.of(new PlayerInfoPacket.AddPlayer.Property("textures", skin.textures(), skin.signature())) :
-                Collections.emptyList();
+                List.of();
         return new PlayerInfoPacket(PlayerInfoPacket.Action.ADD_PLAYER,
-                new PlayerInfoPacket.AddPlayer(getUuid(), getUsername(), prop, getGameMode(), getLatency(), displayName));
+                new PlayerInfoPacket.AddPlayer(getUuid(), getUsername(), prop, getGameMode(), getLatency(), displayName, null));
     }
 
     /**
@@ -1979,7 +1985,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     @Override
     public @NotNull PlayerSnapshot updateSnapshot(@NotNull SnapshotUpdater updater) {
         final EntitySnapshot snapshot = super.updateSnapshot(updater);
-        return new EntitySnapshotImpl.Player(snapshot, username, gameMode);
+        return new SnapshotImpl.Player(snapshot, username, gameMode);
     }
 
     /**
@@ -2018,6 +2024,18 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     @Override
     public Player asPlayer() {
         return this;
+    }
+
+    protected void sendChunkUpdates(Chunk newChunk) {
+        if (chunkUpdateLimitChecker.addToHistory(newChunk)) {
+            final int newX = newChunk.getChunkX();
+            final int newZ = newChunk.getChunkZ();
+            final Vec old = chunksLoadedByClient;
+            sendPacket(new UpdateViewPositionPacket(newX, newZ));
+            ChunkUtils.forDifferingChunksInRange(newX, newZ, (int) old.x(), (int) old.z(),
+                    MinecraftServer.getChunkViewDistance(), chunkAdder, chunkRemover);
+            this.chunksLoadedByClient = new Vec(newX, newZ);
+        }
     }
 
     /**
