@@ -10,7 +10,7 @@ import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -64,7 +64,7 @@ public interface BlockHandler {
     }
 
     default @NotNull Collection<Tag<?>> getBlockEntityTags() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     default byte getBlockEntityAction() {
